--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "bootstrap": "4.5.2",
+    "clsx": "^1.1.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap-icons": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
   },
